// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomizedAxisTick ACT theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap  css-1w517f4-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ACT_ET theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap  css-rnmgd8-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ENCOURA theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap  css-sh4ijp-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap  css-sh4ijp-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;

exports[`CustomizedAxisTick ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <foreignobject
    height="670"
    orientation="bottom"
    requiredfeatures="http://www.w3.org/TR/SVG11/feature#Extensibility"
    text-anchor="middle"
    width="80"
    y="157"
  >
    <p
      aria-label="Latino/Hispanic/Chicano"
      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap  css-6r7ufn-MuiTypography-root-DlsBarChart-yAxisLabel"
      data-mui-internal-clone-element="true"
    >
      Latino/Hispanic/Chicano
    </p>
  </foreignobject>
</div>
`;
